clarklab/templates/fairscape-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    acme.cert-manager.io/http01-edit-in-place: "true"
# annotations for jupyterhub websockets
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.org/websocket-services: "jupyterhub-service"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
  name: fairscape-ingress
  namespace: clarklab
spec:
  rules:
    - host: jupyterhub.fairscape.pods.uvarc.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jupyterhub-service
                port:
                  number: 80 
    - host: fairscape.pods.uvarc.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fairscape-service
                port:
                  number: 80
    # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - fairscape.pods.uvarc.io
          - jupyterhub.fairscape.pods.uvarc.io
        secretName: fairscape-nginx-tls-ingress-secret
